--- a/fifteen.html
+++ b/fifteen.html
@@ -9,11 +9,15 @@
 		<title>Fifteen Puzzle</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
-		<link rel="stylesheet" type="text/css" href="fifteen.css" />
-		<link rel="shortcut icon" type="image/gif" href="fifteen.gif" />
+		<link rel="stylesheet" type="text/css" href="stylesheet/fifteen.css" />
+		<link rel="shortcut icon" type="image/gif" href="image/fifteen.gif" />
 
-		<script src="//www.cs.washington.edu/education/courses/cse190m/09sp/prototype.js" type="text/javascript"></script>
-		<script src="fifteen.js" type="text/javascript"></script>
+		<!--<script src="//www.cs.washington.edu/education/courses/cse190m/09sp/prototype.js" type="text/javascript"></script>-->
+		
+		<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>-->
+		
+		<!--<script src="javascript/fifteen.js" type="text/javascript"></script>-->
 	</head>
 
 	<body>
@@ -41,10 +45,12 @@
 			American puzzle author and mathematician Sam Loyd is often falsely credited with creating the puzzle; indeed, Loyd claimed from 1891 until his death in 1911 that he invented it.  The puzzle was actually created around 1874 by Noyes Palmer Chapman, a postmaster in Canastota, New York.
 		</p>
 
-		<div id="w3c">
+		<!--<div id="w3c">
 			<a href="//validator.w3.org/check/referer"><img src="//www.cs.washington.edu/education/courses/cse190m/09sp/images/w3c-xhtml.png" alt="Valid XHTML 1.1" /></a>
 			<a href="//jigsaw.w3.org/css-validator/check/referer"><img src="//www.cs.washington.edu/education/courses/cse190m/09sp/images/w3c-css.png" alt="Valid CSS" /></a>
 			<a href="//webster.cs.washington.edu/jslint/"><img src="//www.cs.washington.edu/education/courses/cse190m/09sp/images/jslint.png" alt="JavaScript Lint" /></a>
-		</div>
+		</div>-->
+        <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.2.0/prototype.js"></script>
+        <script src="javascript/fifteen.js" type="text/javascript"></script>
 	</body>
 </html>
